# sokol

./: .gitignore  FINAL_RELEASE_v8.0.md  MULTI_AGENT_README.md  README.md  RELEASE_NOTES_v8.0.md  ROCm_SETUP_RX5700XT.md  cleanup_code.py  config.toml  fix_gpu.py  install_dependencies.py  launch_amd_gpu.py  main.py  pyproject.toml  requirements.txt  run.py  sokol_memory.db  test_core_commands.py  test_multi_agent.py  test_mvp.py  test_sokol_prompts.py  test_v2.py
.cursor/plans/: sokol_full_audit_+_product_hardening_plan_d5e9a90e.plan.md
config/: default.yaml  prompts.yaml  safety.yaml
scripts/: bootstrap_venv.ps1  install_deps.bat  rebuild_dispatcher.py  split_dispatcher.py
sokol/: __init__.py  action_schemas.py  agent_tool_loop.py  app_controller.py  app_resolver.py  auto_reports.py  automation.py  chess_helpers.py  clipboard_history.py  code_assistant.py  config.py  contacts.json  core.py  deep_research.py  dispatcher.py  e2e_test.py  fuzzy_match.py  gui_main.py  gui_multi_agent.py  hotkey_system.py  integration.py  knowledge_base.json  launcher.py  llm_hybrid.py  logging_config.py  main.py  memory.json  memory.py  memory_system.py  multi_agent.py  optimization.py  plugin_system.py  policy.py  pre_router.py  prompts.py  prompts_enhanced.py  rag_hints.py  special_modes.py  steam_enhanced.py  steam_helper.py  (+8 more)
sokol/action/: __init__.py  browser_automation.py  executor.py  ocr_fallback.py  uia_automation.py
sokol/agents/: __init__.py  base.py  code_agent.py  orchestrator.py  planning_agent.py  search_agent.py  system_agent.py  vision_agent.py
sokol/brain/: __init__.py  llm.py  prompt.py  reasoning.py  router.py
sokol/core/: __init__.py  agent.py  config.py  constants.py  exceptions.py  intent.py  result.py  types.py
sokol/execution/: __init__.py  api.py  hotkeys.py  uia.py
sokol/executor/: __init__.py  action_executor.py  apps.py  base.py  browser.py  dispatcher.py  files.py  hotkeys.py  system.py  windows.py
sokol/executor/actions/: __init__.py  (+7 more)
sokol/gui/: __init__.py  main_window.py  styles.py  tray.py
sokol/handlers/: __init__.py
sokol/input/: __init__.py  stt.py  text.py  tts.py  voice.py
sokol/integrations/: __init__.py
sokol/intent/: __init__.py  classifier.py  entities.py  parser.py
sokol/llm/: __init__.py  ollama.py  openai.py  response.py  router.py
sokol/memory/: __init__.py  base.py  events.py  habits.py  learning.py  longterm.py  manager.py  memory.py  memory_system.py  privacy.py  profile.py  session.py  store.py
sokol/observability/: __init__.py  debug.py  logging.py
sokol/perception/: __init__.py  screen_input.py  text_input.py  voice_input.py  wake_word.py
sokol/planner/: __init__.py  task_planner.py
sokol/planning/: __init__.py  plan.py  planner.py  validator.py
sokol/policy/: __init__.py  permissions.py  restrictions.py  safety.py
sokol/runtime/: __init__.py  backpressure.py  bounded_mitigation.py  contract_validator.py  control.py  decision_trace.py  errors.py  events.py  execution_contract.md  execution_trace.py  execution_tracker.py  hardening.py  health.py  health_server.py  input.py  intent.py  intent_model.py  invariant_verifier.py  live_loop.py  liveness_monitor.py  memory_layer.py  metrics.py  observability.py  orchestrator.py  planning.py  priority.py  property_checker.py  recovery.py  replay_runner.py  replay_verifier.py  resilience_observer.py  response.py  result.py  retry_budget.py  router.py  stability.py  state.py  task_layer.py  tasks.py  tool_contract.py  (+6 more)
sokol/safety/: __init__.py  checker.py  confirm.py  emergency.py  policy.py  risk.py  sandbox.py
sokol/text/: __init__.py  input.py
sokol/tools/: __init__.py  adapter.py  app_launcher.py  base.py  browser_control.py  chess_engine.py  file_search.py  info_hub.py  media_control.py  registry.py  stem.py  system_info.py  window_manager.py
sokol/ui/: __init__.py  app.py  main_window.py  tray.py
sokol/utils/: __init__.py  audio.py  logging.py  paths.py  validators.py
sokol/voice/: __init__.py  conversation.py  listener.py  stt.py  tts.py
tests/: __init__.py  chaos_harness.py  conftest.py  test_action_schemas.py  test_executor.py  test_gui_truth.py  test_intent.py  test_llm_provider_policy.py  test_memory.py  test_pipeline_v2.py  test_policy.py  test_pre_router.py  test_replay_formalization.py  test_router_guards.py  test_runtime_replay_runner.py  test_runtime_stress_fuzz.py  test_runtime_truth.py  test_safety.py  test_state.py  test_system_e2e_proof.py  test_tools.py
(+24 files in other folders)
