[project]
name = "sokol"
version = "8.0.0"
description = "SOKOL — Russian local AI desktop agent (Windows + Ollama)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.5.0,<3",
    "rapidfuzz>=3.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "ruff>=0.1.0",
]
chess = [
    "chess>=1.10.0",
]

[tool.ruff]
line-length = 120
target-version = "py310"
src = ["sokol", "tests", "run.py"]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.ruff.lint.per-file-ignores]
"sokol/pre_router.py" = ["W293", "E501", "I001"]
"sokol/prompts.py" = ["W291", "E501"]
"sokol/vision_agent.py" = ["I001"]
"sokol/logging_config.py" = ["I001"]
"sokol/dispatcher.py" = ["I001", "W291", "W293", "E501", "E701", "F541", "F601"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
