[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sokol"
version = "2.0.0"
description = "Sokol v2 - Voice AI Agent for Windows"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Sokol Team"}
]
keywords = ["voice-assistant", "ai-agent", "windows", "automation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Desktop Environment",
]

dependencies = [
    # Voice
    "faster-whisper>=1.0.0",
    "edge-tts>=6.1.0",
    "pyaudio>=0.2.14",
    "webrtcvad>=2.0.10",
    
    # LLM
    "ollama>=0.1.0",
    "openai>=1.0.0",
    
    # Windows Automation
    "pywinauto>=0.6.8",
    "comtypes>=1.2.0",
    "pyautogui>=0.9.54",
    "pillow>=10.0.0",
    
    # GUI
    "PyQt6>=6.6.0",
    
    # Data & Config
    "pyyaml>=6.0.0",
    "pydantic>=2.0.0",
    "aiosqlite>=0.19.0",
    
    # Utils
    "httpx>=0.25.0",
    "rich>=13.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.scripts]
sokol = "sokol.main:main"

[project.urls]
Homepage = "https://github.com/user/sokol"

[tool.setuptools.packages.find]
where = ["."]
include = ["sokol*"]

[tool.setuptools.package-data]
sokol = ["py.typed"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
