[project]
name = "sokol"
version = "0.1.0"
description = "Windows AI agent with voice-first interface and UI automation"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Sokol Team" }]
keywords = ["windows", "agent", "voice", "automation", "ai"]

dependencies = [
    "pydantic>=2.5.0",
    "pyqt6>=6.6.0",
    "tomli>=2.0.0; python_version < '3.11'",
    "tomli-w>=1.0.0",
    "openai>=1.0.0",
    "anthropic>=0.18.0",
    "httpx>=0.25.0",
    "pywinauto>=0.6.8",
    "comtypes>=1.2.0",
    "playwright>=1.40.0",
    "psutil>=5.9.0",
    "pynput>=1.7.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.7.0",
    "ruff>=0.1.0",
]
voice = [
    "pvporcupine>=3.0.0",
    "vosk>=0.3.45",
    "openwakeword>=1.5.0",
    "whisper>=1.1.0",
    "edge-tts>=6.1.0",
    "pyttsx3>=2.90",
]

[project.scripts]
sokol = "sokol.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["sokol"]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
